$Id: History,v 1.14 1999-11-07 13:11:10 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
Nov 7 99, H.Kurashige (run-V00-01-03)
-  Comments are enriched for software reference manual.


Nov 4, 99, M.Asai (tag run-V00-01-02)
- Comments are enriched for software reference manual.

Oct 7, 99, J.Allison (tag run-V00-01-01)
- Removed -I$(G4BASE)/graphics_reps/include from GNUmakefile (no
  longer necessary after G4VVisManager moved to intercoms).

Jul 25, 99 M.Asai (tag run-V00-01-00)
- Store/restore the status of the random number engine to
  separate files

Jun 09, 99 M.Asai (tag run-01-00-06)
- Store/restore the status of the random number engine
- Get methods of G4RunManager for the user action classes

May 21, 99 H.Kurashige (run-01-00-05)
- Fixed bug in G4VUserPhysicsList::InitializeProcessManager()

May 17, 99 J.Allison
- In G4RunManager.cc, moved G4Timer.hh to prevent conflict with ObjectSpace
  on Sun when using the STL Interface.

Apr 22, 99 M.Asai (tag run-01-00-04)
- Now run ID is set by G4RunManager.

Apr 16,  99 H.Kurashige (tag run-01-00-03)
-  Remove G4VUserPhysicsList::ConstructAllParticles and related
-  Change argument of SetCuts method

Apr 14, 99 H.Kurashige (tag run-01-00-02)