@@ -1,4 +1,4 @@
-$Id: History,v 1.14 1999-11-07 13:11:10 kurasige Exp $
+$Id: History,v 1.15 1999-12-02 16:26:05 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Dec 2 99, M.Asai (run-V00-01-04)
+- G4RunManager displays the version number when it is constructed.
+
 Nov 7 99, H.Kurashige (run-V00-01-03)
 -  Comments are enriched for software reference manual.
 
